# topic-pipeline

./: .dockerignore  .gitignore  CLAUDE.md  CLAUDE_dh_v1.md  Dockerfile  LICENSE  PLAN-v2-trend.md  PLAN-v2.md  README.md  TODO.md  default_config.yaml  pyproject.toml  requirements.txt
DATA/: aqua_byproducts-5590.csv  fetch_pmids.py  sleep_quality-9999.csv
Docs/: KNOWN_LIMITATIONS.md  NEW_ENV_SETUP.md  NEXT_PLAN.md  REVISED_PLAN.md  v2_pilot_decisions.md  v2_pilot_plan.md  v3_improvement_plan.md
Docs/diagram/: pipeline.drawio  pipeline_v2.drawio  pipeline_v3.drawio
_meta_topicmodeling/: Topicmodeling final wrapping README.md
_meta_topicmodeling/Slides/: pipeline_f.drawio
depricated/: PLAN.md  config-v1_template.yaml  phase3a_test_config.yaml
src/topic_pipeline/: cli.py
src/topic_pipeline/presets/: biomedical.yaml  general.yaml
src/topic_pipeline/shared/: colors.py  convention.py  device.py  fonts.py  html_common.py  llm.py  preprocess.py  pubmed.py  relevance.py
src/topic_pipeline/steps/: s0_preprocess.py  s1_fetch.py  s2_embed.py  s3_cluster.py  s4_enrich.py  s5_label.py  s5_label_relevance.py  s6_timeseries.py  s7_report.py
tests/: conftest.py  test_cli.py  test_colors.py  test_convention.py  test_device.py  test_fonts.py  test_html_common.py  test_init.py  test_llm.py  test_preprocess.py  test_pubmed.py  test_relevance.py  test_s0_preprocess.py  test_s1_fetch.py  test_s3_cluster.py  test_s4_enrich.py  test_s5_label.py  test_s5_prompts.py  test_s5_relevance.py  test_s7_report.py
tests/fixtures/: sample_relevance.md
