[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "topic-pipeline"
version = "0.1.0"
description = "PMID CSV → 임베딩 → BERTopic 클러스터 → LLM 라벨 → 시계열/트렌드 → 종합 HTML 리포트 CLI 파이프라인"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "dh.kim"},
]
keywords = ["bertopic", "pubmed", "bibliometric", "topic-modeling", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyYAML>=6.0",
    "loguru>=0.7",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "requests>=2.31",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "bertopic>=0.16",
    "sentence-transformers>=2.7",
    "anthropic>=0.96",
    "plotly>=5.0",
    "scipy>=1.10",
    "umap-learn>=0.5",
    "pymannkendall>=1.4",
]

[project.scripts]
topic-pipeline = "topic_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
