[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "topic-pipeline"
dynamic = ["version"]
description = "PMID CSV → 임베딩 → BERTopic 클러스터 → LLM 라벨 → 시계열/트렌드 → 종합 HTML 리포트 CLI 파이프라인"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "dh.kim"},
]
keywords = ["bertopic", "pubmed", "bibliometric", "topic-modeling", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
# floor = 검증된 하한, cap = 다음 major (requirements.txt 핀 기준).
# latest 자동설치로 인한 silent breakage 방지 (BERTopic 0.17 / sentence-transformers 3.x 등).
dependencies = [
    "PyYAML>=6.0,<7",
    "loguru>=0.7,<0.8",
    "tqdm>=4.66,<5",
    "matplotlib>=3.8,<4",
    "requests>=2.31,<3",
    "pandas>=2.0,<3",
    "scikit-learn>=1.3,<2",
    "bertopic>=0.16,<0.17",
    "sentence-transformers>=2.7,<3",
    "anthropic>=0.96,<1",
    "plotly>=5.0,<7",
    "scipy>=1.10,<2",
    "umap-learn>=0.5,<0.6",
    "pymannkendall>=1.4,<2",
]

[project.optional-dependencies]
# GPU 사용 시: pip install -e .[gpu]  (기본은 CPU torch — sentence-transformers 가 transitive 로 끌어옴)
gpu = ["torch"]
# 테스트: pip install -e .[test] && pytest
test = ["pytest>=8", "responses>=0.25"]

[project.scripts]
topic-pipeline = "topic_pipeline.cli:main"

[tool.setuptools.dynamic]
version = {attr = "topic_pipeline.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
